--- a/src/components/Folds/folds.module.css
+++ b/src/components/Folds/folds.module.css
@@ -5,32 +5,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-y: hidden; /* Default for non-mobile */
-    padding-left: 350px; /* Default for non-mobile */
-    padding-right: 20px;
-    padding-top: 0px; /* Default for non-mobile */
+    padding: 0px 20px 0px 360px;
     position: relative;
-}
-
-.container {
-    position: relative;
-    width: 100%; /* Default for non-mobile */
+    overflow-y: auto;
+    /* Hide scrollbar for WebKit browsers (Chrome, Safari) */
+	&::-webkit-scrollbar {
+		display: none;
+	}
+	/* Hide scrollbar for other browsers */
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
 
 .frame {
     display: flex;
-    flex-direction: row; /* Default for non-mobile */
-    align-items: flex-start; /* Default for non-mobile */
-    justify-content: center; /* Default for non-mobile */
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
     gap: 20px;
-    padding-left: 0px; /* Default for non-mobile */
+    padding-left: 0px;
 }
 
 .project {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center; /* Default for non-mobile */
+    justify-content: center;
     z-index: 2;
 }
 
@@ -38,7 +38,6 @@
     font-family: halyard-display, sans-serif;
     font-size: 3rem;
     font-weight: 400;
-    background: rgba(255, 255, 255, 0.2);
     padding: 0px 6px 0px 6px;
     line-height: 3.2rem;
 }
@@ -48,14 +47,12 @@
     font-weight: 400;
     font-size: 1.2rem;
     width: auto;
-    background: rgba(255, 255, 255, 0.2);
     padding: 0px 6px 0px 6px;
 }
 
 .date {
     margin-top: 0px;
     font-size: 1.2rem;
-    background: rgba(255, 255, 255, 0.1);
     padding: 0px 6px 0px 6px;
     font-weight: 700;
 }
@@ -63,21 +60,25 @@
 .videoWrapper {
     display: flex;
     position: relative;
+    justify-content: center;
+    height: auto;
+    width: auto;
+}
+.videoContainer {
+    display: flex;
+    position: relative;
     cursor: pointer;
     overflow: hidden;
-    transition: all 0.3s ease;
-    z-index: 3;
-    width: 50vw; /* Default for non-mobile */
-    justify-content: flex-start; /* Default for non-mobile */
-    height: auto;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    width: 50vw;
+    height: auto;
+    z-index: 3;
 }
-
 .video {
     transition: all 0.3s ease;
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: auto;
     background: black;
 }
 
@@ -109,14 +110,23 @@ a.custom-link:hover {
 
 /* Media Queries for Responsive Design */
 @media only screen and (max-width: 1250px) {
+    .fold {
+        padding-left: 260px;
+    }
     .frame {
         flex-direction: column;
-        align-items: flex-start;
     }
-    .video-wrapper {
-        width: calc(100vw - 380px);
+    .videoContainer {
+        width: calc(100vw - 280px);
+        max-width: 700px;
         justify-content: flex-start;
-        height: auto;
+    }
+    .title {
+        font-family: halyard-display, sans-serif;
+        font-size: 2rem;
+        font-weight: 400;
+        padding: 0px 6px 0px 6px;
+        line-height: 2.2rem;
     }
 }
 
@@ -138,9 +148,8 @@ a.custom-link:hover {
     .project {
         justify-content: flex-start;
     }
-    .video-wrapper {
+    .videoContainer {
         width: calc(100vw - 40px);
-        height: auto;
     }
     .shape {
         top: calc(50vh - 400px);
