--- a/src/components/ProjectDetails/details.module.css
+++ b/src/components/ProjectDetails/details.module.css
@@ -40,6 +40,7 @@
     background: none;
 	gap: 20px;
 	position: relative;
+	padding: 0px 80px 0px 60px;
 }
 .arrow {
     font-size: 2rem;
@@ -51,6 +52,7 @@
 .modalImage {
     width: 100%;
 	height: 100%;
+	max-height: calc(100vh - 40px);
 	max-width: 1000px;
 	z-index: 2;
 }
@@ -240,6 +242,9 @@
 /* Media Queries for Responsive Design */
 @media only screen and (max-width: 1250px) {
 	.padded {
+		padding-left: 260px;
+	}
+	.modal {
 		padding-left: 260px;
 	}
 }
