--- a/src/components/Folds/folds.module.css
+++ b/src/components/Folds/folds.module.css
@@ -63,6 +63,9 @@
     justify-content: center;
     height: auto;
     width: auto;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 20px;
 }
 .videoContainer {
     display: flex;
@@ -70,16 +73,18 @@
     cursor: pointer;
     overflow: hidden;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    width: 50vw;
+    width: auto;
     height: auto;
     z-index: 3;
 }
 .video {
     transition: all 0.3s ease;
     z-index: 2;
-    width: 100%;
+    width: auto;
     height: auto;
-    background: black;
+    background: rgb(255, 255, 255);
+    object-fit: contain;
+    
 }
 
 a.customLink {
